# I.BA_DSPRO2

./: README.md  pyproject.toml
data_testing/: glamos_data.ipynb  s2_metadata_and_roi_stats.csv  satellite.ipynb  switzerland_glacier_s2_metadata_stats.csv
data_testing/glamos_data/massbalance_2025_r2025/: massbalance_fixdate_2025_r2025.csv  massbalance_fixdate_elevationbins_2025_r2025.csv  massbalance_observation_2025_r2025.csv  massbalance_observation_elevationbins_2025_r2025.csv
notebooks/: glamos_exploration.ipynb  glamos_qa.ipynb
src/: glamos_processing.py
